styles/_sass/_layouts.scss
.project-header {
    height: 40vw;
    min-height: 30vw;
    display: grid;
    grid-template-columns: 1fr 1fr;
    column-gap: 2vw;
    grid-template-rows: repeat(5, 20%);
    padding: 5vw 10vw;
    color: black;
}

.project-title {
    margin: 0;
    padding: 0;
    grid-column: 1;
    grid-row: 1;
    font-size: 3rem;
}

.project-description {
    font-size: 1.2rem;
    margin: 0;
    padding: 0;
    grid-column: 1;
}

.project-feature {
    grid-column: 2;
    grid-row: 2;
    img {
        width: 40vw;
        height: auto;
    }
}

.project-meta {
    grid-column: 1;
    grid-row: 5;
    display: flex;
    flex-direction: row;
    width: 80%;
    justify-content: space-between;

    h3 {
        font-size: 1rem;
        margin: 0;
        padding: 0;
    }
    
    li {
        list-style: none;
        font-size: 1rem;
    }
}

.project-year {
    grid-row: 1;
    grid-column: 2;
}


article {
    margin: 5vw 12vw;
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-template-rows: min-content;
    gap: 10vw 2vw;
    img {width: 100%;}
    p {font-size: 1rem; color: rgba(0, 0, 0, 0.7); line-height: 1.6; margin: 0; padding: 0;}
    h2 {font-family: 'Avenir Next'; font-size: 1.2rem; font-weight: 500; margin: 0; padding: 0;}
}


.print {
    section {
        img {
            width: 70%;
            padding: 1rem;
            height: auto;
        }
    }

    section:nth-of-type(1){
        grid-column: 2 / span 2;
        grid-row: 1;
    }

    section:nth-of-type(2){
        grid-column: 4 / span 2;
        grid-row: 2;
    }

    section:nth-of-type(3){
        grid-column: 2 / span 2;
        grid-row: 4;
    }

    section:nth-of-type(4){
        grid-column: 4 / span 2;
        grid-row: 6;
    }

    section:nth-of-type(5){
        grid-column: 2 / span 4;
    }

    section:nth-of-type(6){
        grid-column: 4 / span 2;
    }

    section:nth-of-type(7){
        grid-column: 2 / span 4;
    }

    figure:nth-of-type(1) {
        grid-column: 1 / span 3;
        grid-row: 2 / span 2;
    }

    figure:nth-of-type(2) {
        grid-column: 3 / span 4;
        grid-row: 4 / span 2;
    }

    figure:nth-of-type(3) {
        grid-column: 1 / span 3;
        grid-row: 6 / span 2;
    }

    figure:nth-of-type(4) {
        grid-column: 4 / span 3;
        grid-row: 7;
    }

    figure:nth-of-type(5) {
        grid-column: 4 / span 3;
        grid-row: 7;
    }
}



.motion {
    section:nth-of-type(1){
        grid-column: 2 / span 2;
        grid-row: 1;
    }

    section:nth-of-type(2){
        grid-column: 4 / span 2;
        grid-row: 2;
    }

    section:nth-of-type(3){
        grid-column: 2 / span 4;
        grid-row: 4;
        margin-bottom: 20vh;
        img {
            position: relative;
            position: absolute;
            left: 0;
            height: 30vh;
            width: auto;
            opacity: 0.8;
        }
    }

    section:nth-of-type(4){
        grid-column: 4 / span 2;
        grid-row: 6;
    }

    section:nth-of-type(5){
        grid-column: 2 / span 4;
        grid-row: 7;
    }

    // section:nth-of-type(6){
    //     grid-column: 4 / span 2;
    // }

    // section:nth-of-type(7){
    //     grid-column: 2 / span 4;
    // }


    figure:nth-of-type(1) {
        grid-column: 1 / span 3;
        grid-row: 2 / span 2;
    }

    figure:nth-of-type(2) {
        grid-column: 1 / span 2;
        grid-row: 5;
    }

    figure:nth-of-type(3) {
        grid-column: 3/ span 2;
        grid-row: 5;
    }

    figure:nth-of-type(4) {
        grid-column: 5 / span 2;
        grid-row: 5;
    }

    figure:nth-of-type(5) {
        grid-column: 2 / span 4;
        grid-row: 7;
    }


}

